<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.transfer_dialog.TransferDialogFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/transfer"
                android:textColor="@color/primaryColor"
                android:textStyle="bold"
                android:layout_margin="10dp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/amount_transfer"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:errorEnabled="true"
                android:hint="@string/amount"
                app:hintTextColor="@color/primaryColor"
                app:startIconDrawable="@drawable/ic_amount"
                app:startIconTint="@color/primaryColor">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/user_transfer"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:hint="@string/receiver"
                app:hintTextColor="@color/primaryColor"
                app:startIconDrawable="@drawable/ic_person"
                app:startIconTint="@color/primaryColor">

                <AutoCompleteTextView
                    android:id="@+id/list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none" />

            </com.google.android.material.textfield.TextInputLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/cancel_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:text="@string/cancel"
                    android:textColor="@color/primaryColor"
                    android:textSize="18sp"
                    android:textAllCaps="false"
                    android:layout_alignParentStart="true"
                    android:layout_margin="10dp" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/submit_transfer_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/primaryColor"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp"
                    android:text="@string/transfer"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textAllCaps="false"
                    android:layout_alignParentEnd="true"
                    android:layout_margin="10dp" />
            </RelativeLayout>

        </LinearLayout>

    </FrameLayout>
</layout>